crates/perl-lsp-rs/tests/snapshots/lsp_cap_snap__code_action_kinds.snap
---
source: crates/perl-lsp-rs/tests/lsp_cap_snap.rs
assertion_line: 73
expression: "&kinds"
---
- quickfix
- refactor
- refactor.extract
- refactor.extract.variable
- refactor.extract.subroutine
- refactor.rewrite
- source.fixAll
- source.modernize
