crates/perl-lsp-rs/tests/snapshots/lsp_cap_snap__server_capabilities_minimal_client.snap
---
source: crates/perl-lsp-rs/tests/lsp_cap_snap.rs
expression: caps
---
callHierarchyProvider: true
codeActionProvider:
  codeActionKinds:
    - quickfix
    - refactor
    - refactor.extract
    - refactor.rewrite
    - source.fixAll
    - source.modernize
  resolveProvider: true
codeLensProvider:
  resolveProvider: true
colorProvider: true
completionProvider:
  completionItem:
    insertTextModes:
      - 1
      - 2
    labelDetailsSupport: true
  resolveProvider: true
  triggerCharacters:
    - $
    - "@"
    - "%"
    - ">"
    - ":"
    - "."
    - /
    - "\\"
    - "\""
    - "'"
declarationProvider: true
definitionProvider: true
diagnosticProvider:
  identifier: perl-lsp
  interFileDependencies: false
  workspaceDiagnostics: true
documentFormattingProvider: true
documentHighlightProvider: true
documentLinkProvider:
  resolveProvider: true
documentSymbolProvider: true
executeCommandProvider:
  commands:
    - perl.runTests
    - perl.runFile
    - perl.runScript
    - perl.runTestSub
    - perl.runCritic
    - perl.runTest
    - perl.runTestFile
    - perl.runSubtest
    - perl.debugFile
    - perl.debugTest
    - perl.debugTests
    - perl.debugTestFile
    - perl.goToTest
    - perl.goToImplementation
    - perl.explainProviderDecision
    - perl.workspaceTrustReport
    - perl.agentContext
    - perl.previewSafeDelete
    - perl.safeDeleteSymbol
    - perl.previewPackageRename
    - perl.explainMissingModuleLookup
experimental:
  typeHierarchyProvider: true
foldingRangeProvider: true
hoverProvider: true
implementationProvider: true
inlayHintProvider:
  resolveProvider: true
inlineValueProvider: true
linkedEditingRangeProvider: true
monikerProvider: true
positionEncoding: utf-16
referencesProvider: true
renameProvider:
  prepareProvider: true
selectionRangeProvider: true
semanticTokensProvider:
  full:
    delta: true
  legend:
    tokenModifiers:
      - declaration
      - definition
      - readonly
      - static
      - deprecated
      - abstract
      - async
      - modification
      - documentation
      - defaultLibrary
      - scalarVariable
      - arrayVariable
      - hashVariable
    tokenTypes:
      - namespace
      - type
      - class
      - interface
      - enum
      - enumMember
      - typeParameter
      - function
      - method
      - property
      - macro
      - variable
      - parameter
      - keyword
      - modifier
      - comment
      - string
      - number
      - regexp
      - operator
      - sql_string
      - sql_heredoc_keyword
      - json_heredoc_key
      - label
  range: true
signatureHelpProvider:
  retriggerCharacters:
    - ","
    - "@"
    - "%"
    - "{"
    - "["
  triggerCharacters:
    - (
    - ","
textDocumentSync:
  change: 1
  openClose: true
  save:
    includeText: true
  willSave: true
  willSaveWaitUntil: false
typeDefinitionProvider: true
typeHierarchyProvider:
  workDoneProgressOptions: {}
workspace:
  textDocumentContent:
    schemes:
      - perldoc
  workspaceFolders:
    changeNotifications: true
    supported: true
workspaceSymbolProvider:
  resolveProvider: true
