crates/perl-lsp-rs/tests/snapshots/lsp_cap_snap__workspace_file_operation_filters.snap
---
source: crates/perl-lsp-rs/tests/lsp_cap_snap.rs
expression: "&file_operations"
---
didRename:
  filters:
    - pattern:
        glob: "**/*"
willRename:
  filters:
    - pattern:
        glob: "**/*"
